...
    >
      <Tab.Screen
        name="Projects"
        component={ProjectStackScreen}
        options={{
          tabBarLabel: '1 项目',
          tabBarButtonTestID: 'tab-projects',
          tabBarAccessibilityLabel: '项目',
        }}
      />
      <Tab.Screen
        name="Resources"
        component={ResourceStackScreen}
...
      />
      <Tab.Screen
        name="Settings"
        component={SettingsStackScreen}
        options={{
          tabBarLabel: '设置',
          tabBarButtonTestID: 'tab-settings',
          tabBarAccessibilityLabel: '设置',
        }}
      />
    </Tab.Navigator>
  );
};
...
